--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
+# Logging
 logging.level.root=WARN
 logging.file = mylogfile.log
 
+# Datasource
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url= jdbc:postgresql://localhost/salaryapp
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.open-in-view=false
 
+# Jpa
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
+# Flyway
 spring.flyway.locations=classpath:/db/migration
 spring.flyway.baseline-on-migrate = true
